added guest login

--- a/src/pages/Home/Homepage.scss
+++ b/src/pages/Home/Homepage.scss
@@ -88,6 +88,10 @@
           font-weight: 400;
           color: aliceblue;
         }
+        h3{
+          display: flex;
+          gap:1rem;
+        }
       }
     }
 }
