--- a/src/components/GuestBanner/GuestBanner.css
+++ b/src/components/GuestBanner/GuestBanner.css
@@ -1,6 +1,6 @@
 .guest-banner {
     background-color: #ffcc00;
-    color: #333;
+    color: black;
     text-align: center;
     padding: 8px;
     font-size: 14px;
