--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #1E1E1E;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #3e4451;
+    border-radius: 4px;   
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #4a5568;
+}
+
+  
 *{
      
     margin: 0;
